Fixed contact page layout issue.

--- a/css/styles.css
+++ b/css/styles.css
@@ -657,12 +657,7 @@ body {
 .block-contact {
   padding: 1rem;
 }
-.block-contact img {
-  height: 200px;
-  width: 100%;
-  object-fit: cover;
-  margin-bottom: 3rem;
-}
+
 .contact__description {
   margin: 0 2rem 2rem 0;
 }
@@ -734,8 +729,6 @@ input[type="tel"]:focus {
 
 .iframe__maps {
   width: 100%;
-  height: 100%;
-  max-height: 400px;
 }
 
 /* Carousel */
